--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <html>
   <head>
     <script type='text/javascript' src='nikki.js'></script>
+		<style>
+		table
+		{
+			font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+			font-size: 12px;
+			background: #fff;
+			margin: 45px;
+			width: 480px;
+			border-collapse: collapse;
+			text-align: left;
+		}
+		th
+		{
+			font-size: 14px;
+			font-weight: normal;
+			color: #039;
+			padding: 10px 8px;
+			border-bottom: 2px solid #6678b1;
+		}
+		 td
+		{
+			color: #669;
+			padding: 9px 8px 0px 8px;
+		}
+		tbody tr:hover td
+		{
+			color: #009;
+		}
+
+		</style>
     
   </head>
   <body>
-    Hello world
+    <input type='text' id='cookie' onChange='updateCookie()'/>
     <script>
-     init();
+		document.getElementById("cookie").value = loadCookie();
     </script>
   </body>
 </html>
