--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
 		{
 			color: #009;
 		}
-
+		td.S {
+			color: #FB3;
+		}
+		td.A {
+			color: #F0A;
+		}
+		td.B {
+			color: #A66;
+		}
+		td.C {
+			color: #38F;
+		}
+		
 		</style>
     
   </head>
-    <div>Hello world</div>
+    <div>Nikki's wardrobe. By Ivan's workshop</div>
     <div>
     	<form name="filter_form">
 	    	<div>
