--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 		</style>
     
   </head>
-    <div>Nikki's wardrobe. By Ivan's workshop</div>
+    <div>
+    	Nikki's wardrobe. By Ivan's workshop<br/>
+    	服装数据来自jillhx@贴吧 20150528
+    </div>
     <div>
     	<form name="filter_form">
 	    	<div>
