--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </head>
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150530
+      服装数据来自jillhx@贴吧 20150530<br/>
       Update 20150531:增加了分数排序，可以根据关卡权重来挑选服装，不过饰品的分数计算还有问题，请不要过于相信。
     </div>
     <div>
