--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
   </head>
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150530<br/>
-      Update 20150531: 根据dianashusy的测试结果更新了外套和袜子的估值。
+      服装数据来自jillhx@贴吧 20150531<br/>
+      Update 20150531: 根据dianashusy的测试结果更新了外套和袜子的估值。<br/>
+      Update 20150531: 更新了服装数据，共计1615，衣柜百分比：83%<br/>
       <strong>注意！饰品穿多了有衰减，请不要穿戴1000分以下的饰品</strong>
     </div>
     <div>
