--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       margin: 45px;
       border-collapse: collapse;
       text-align: center;
+      table-layout: fixed;
     }
     th
     {
@@ -52,9 +53,9 @@
   </head>
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150531<br/>
-      Update 20150531: 根据dianashusy的测试结果更新了外套和袜子的估值。<br/>
-      Update 20150531: 更新了服装数据，共计1615，衣柜百分比：83%<br/>
+      服装数据来自jillhx@贴吧 20150601<br/>
+      Update 20150602: 加入了少女1的属性权重<br/>
+      Update 20150602: 更新了服装数据，合计1663，衣柜百分比85.6%<br/>
       <strong>注意！饰品穿多了有衰减，请不要穿戴1000分以下的饰品</strong>
     </div>
     <div>
@@ -114,7 +115,6 @@
     <button onClick="loadCustomInventory()">Update inventory</button>
     <script>
       init();
-      drawTable(clothes, "clothes");
     </script>
   </body>
 </html>
