--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       服装数据来自jillhx@贴吧 20150601<br/>
       Update 20150602: 加入了少女1的属性权重<br/>
       Update 20150602: 更新了服装数据，合计1663，衣柜百分比85.6%<br/>
+      <strong>更新后修正了许多名称，请注意检查自己的衣柜</strong>
       <strong>注意！饰品穿多了有衰减，请不要穿戴1000分以下的饰品</strong>
     </div>
     <div>
