--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150601<br/>
       Update 20150602:<br/>
+      &nbsp;&nbsp;- 紧急修正，之前没有自定义衣柜会导致页面无法加载的bug<br/>
       &nbsp;&nbsp;- 加入了少女1的属性权重<br/>
       &nbsp;&nbsp;- 更新了服装数据，合计1663，衣柜百分比85.6%<br/>
       &nbsp;&nbsp;- 重构了代码，改用id来存放数据，求各种捉虫<br/>
