--- a/index.html
+++ b/index.html
@@ -53,14 +53,10 @@
   </head>
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150601<br/>
-      Update 20150602:<br/>
-      &nbsp;&nbsp;- 紧急修正，之前没有自定义衣柜会导致页面无法加载的bug<br/>
-      &nbsp;&nbsp;- 加入了少女1的属性权重<br/>
-      &nbsp;&nbsp;- 更新了服装数据，合计1663，衣柜百分比85.6%<br/>
-      &nbsp;&nbsp;- 重构了代码，改用id来存放数据，求各种捉虫<br/>
-      &nbsp;&nbsp;- 现在支持按照类别和id批量导入衣柜了<br/>
-      &nbsp;&nbsp;- <strong>更新后修正了许多名称，有些衣服可能会从自己的衣柜中移除，请注意核对一下</strong><br/>
+      服装数据来自jillhx@贴吧 20150602<br/>
+      Update 20150603:<br/>
+      &nbsp;&nbsp;- 更新了服装数据，合计1687，百分比87%<br/>
+      &nbsp;&nbsp;- 昨天的更新导致许多同学打开网页出现了异常，在这里深表歉意，如果还有问题请不吝在贴吧主贴中提出<br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong>
     </div>
     <div>
