--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
       服装数据来自jillhx@贴吧 20150602<br/>
       Update 20150603:<br/>
       &nbsp;&nbsp;- 更新了服装数据，合计1687，百分比87%<br/>
-      &nbsp;&nbsp;- 昨天的更新导致许多同学打开网页出现了异常，在这里深表歉意，如果还有问题请不吝在贴吧主贴中提出<br/>
+      &nbsp;&nbsp;- 修正了一些部件无法加入自己衣柜的错误<br/>
+      &nbsp;&nbsp;- 昨天的更新导致许多同学打开网页出现了异常，在这里深表歉意，如果还有问题请不吝在贴吧主贴中提出。不过我是肯定不会补偿你们的钻石和体力的！<br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong>
     </div>
     <div>
