--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150602<br/>
-      Update 20150603:<br/>
-      &nbsp;&nbsp;- 更新了服装数据，合计1687，百分比87%<br/>
-      &nbsp;&nbsp;- 修正了一些部件无法加入自己衣柜的错误<br/>
-      &nbsp;&nbsp;- 昨天的更新导致许多同学打开网页出现了异常，在这里深表歉意，如果还有问题请不吝在贴吧主贴中提出。不过我是肯定不会补偿你们的钻石和体力的！<br/>
-      <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong>
+      Update 20150604:<br/>
+      &nbsp;&nbsp;- 今天jillhx忘了把u盘带回家，衣柜停更一天<br/>
+      &nbsp;&nbsp;- 修正了一些可能导致浏览器不兼容的问题，但是保证不兼容IE，请务必死了这条心吧<br/>
+      &nbsp;&nbsp;- 增加了部件的来源，同样来自jill的数据<br/>
+      <strong>衣服属性错误请汇报给<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜贴</a></strong><br/>
+      <strong>请抽空去<a href="http://tieba.baidu.com/p/3803353203">amy_翡翠的完善召集令</a>看看有没有你可以帮忙补充的衣服情报</strong><br/>
+      <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
     </div>
     <div>
       <form name="filter_form">
