--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </form>
     </div>
     <hr>
-    导入批量id，请先选择要导入的类别，然后在文本框内输入id（保留百位和十位的0），用空格、逗号或者换行隔开
+    导入批量衣服，请先选择要导入的类别，然后在文本框内输入编号（保留百位和十位的0），用空格、逗号或者换行隔开，编号可以在游戏中的衣柜列表中查到
     <div id = "import">
       <select id="importCate" onChange="clearImport()"></select> <br/>
       <textarea id="importData" rows=5 style="width:600px"></textarea>
