--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div>
           <input type="radio" name="mode" value="filtering" onClick="changeMode(true)" checked/> 筛选
           <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" /> 计分
-          <select id="theme" onChange="changeTheme()" disabled></select>
+          <select id="theme" onChange="changeTheme()"></select>
         </div>
         <div class='facet'>
           <div>
