--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   </head>
     <div>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150602<br/>
-      Update 20150604:<br/>
-      &nbsp;&nbsp;- 今天jillhx忘了把u盘带回家，衣柜停更一天<br/>
-      &nbsp;&nbsp;- 修正了一些可能导致浏览器不兼容的问题，但是保证不兼容IE，请务必死了这条心吧<br/>
-      &nbsp;&nbsp;- 增加了部件的来源，同样来自jill的数据<br/>
+      服装数据来自jillhx@贴吧 20150604<br/>
+      Update 20150605:<br/>
+      &nbsp;&nbsp;- jillhx的衣柜已经更新到：合计1812 衣柜占比93% 离全收集已经不远了！！<br/>
+      &nbsp;&nbsp;- 已经在amy_翡翠的帮助下将袜子和饰品按照装备部位区分，更方便选择<br/>
+      &nbsp;&nbsp;- 还有神秘更新，即将放出！<br/>
       <strong>衣服属性错误请汇报给<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜贴</a></strong><br/>
       <strong>请抽空去<a href="http://tieba.baidu.com/p/3803353203">amy_翡翠的完善召集令</a>看看有没有你可以帮忙补充的衣服情报</strong><br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
