--- a/index.html
+++ b/index.html
@@ -56,15 +56,13 @@
   </head>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150604<br/>
-      Update 20150605:<br/>
+      服装数据来自jillhx@贴吧 20150605<br/>
+      Update 20150605晚:<br/>
       <ul>
-        <li>jillhx的衣柜已经更新到：合计1812 衣柜占比93% 离全收集已经不远了！！</li>
-        <li>已经在amy_翡翠的帮助下将袜子和饰品按照装备部位区分，更方便选择</li>
-        <li>关卡权重更新了，注意公主关和少女关权重一样(谢谢dianashusy和娘娘不干啦的帮助)。楼主无能，还没有开启第六章支线，等待好心人解救中。你们使用时可以把大喵的提示加倍。</li>
+        <li>jillhx的衣柜已经更新到：合计1845 衣柜占比95% 离全收集已经不远了！请检查jillhx的衣柜贴看看有没有可以帮忙补完的。</li>
+        <li>已经更新全部关卡权重，具体数值可能有0.5的误差，不过基本不影响使用。</li>
       </ul>
       <strong>衣服属性错误请汇报给<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜贴</a></strong><br/>
-      <strong>请抽空去<a href="http://tieba.baidu.com/p/3803353203">amy_翡翠的完善召集令</a>看看有没有你可以帮忙补充的衣服情报</strong><br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
       说起来，看到各位纷纷拿到了连胜或者第一的各种成就，我很欣慰，其实最初的目的只是想让大家节省一些脑细胞和时间，不要把时间都浪费在无聊地筛选数字上，这种事情电脑做合适。
       没有想到的是那么多朋友都跑过来感谢说在线筛选器帮助了自己，我也看到了你们在吧里向其他人推荐这个网页，我很惶恐，也很感动。但愿这个小小的软件能让你们在玩奇迹的每一天心情都可以好一些。<br/>
