--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150605<br/>
-      Update 20150606:<br/>
+      Update 20150607:<br/>
       <ul>
-        <li>重写了部分代码，使用jQuery来处理兼容性问题，可能会有大量bug，欢迎举报</li>
-        <li>为了提高页面效率将衣服按照大类拆开显示</li>
+        <li>略微修正了界面</li>
+        <li>批量导入不再要求编号百十位填0</li>
       </ul>
       <strong>衣服属性错误请汇报给<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜贴</a></strong><br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
@@ -179,7 +179,7 @@
     </div>
     <div id = "clothes"></div>
     <hr>
-    导入批量衣服，请先选择要导入的类别，然后在文本框内输入编号（保留百位和十位的0），用空格、逗号或者换行隔开。不知道编号在哪儿的请点<a href="http://tieba.baidu.com/p/3808711082" target="_blank">这里</a>
+    导入批量衣服，请先选择要导入的类别，然后在文本框内输入编号，用空格、逗号或者换行隔开。不知道编号在哪儿的请点<a href="http://tieba.baidu.com/p/3808711082" target="_blank">这里</a>
     <div id = "import">
       <select id="importCate" onChange="clearImport()"></select> <br/>
       <textarea id="importData" rows=5 style="width:600px"></textarea>
