--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
   </head>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150605<br/>
+      服装数据来自jillhx@贴吧 20150607<br/>
       Update 20150607:<br/>
       <ul>
+        <li>更新到jillhx衣柜阶段终结版，合计1907，占比98%。仅有6件可获得物品尚未获得，详情见<a href="http://tieba.baidu.com/p/3783436049?pid=69500845673#69500845673">jillhx的衣柜贴</a> </li>
         <li>略微修正了界面</li>
         <li>批量导入不再要求编号百十位填0</li>
       </ul>
-      <strong>衣服属性错误请汇报给<a href="http://tieba.baidu.com/p/3783436049">jillhx的衣柜贴</a></strong><br/>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
       说起来，看到各位纷纷拿到了连胜或者第一的各种成就，我很欣慰，其实最初的目的只是想让大家节省一些脑细胞和时间，不要把时间都浪费在无聊地筛选数字上，这种事情电脑做合适。
       没有想到的是那么多朋友都跑过来感谢说在线筛选器帮助了自己，我也看到了你们在吧里向其他人推荐这个网页，我很惶恐，也很感动。但愿这个小小的软件能让你们在玩奇迹的每一天心情都可以好一些。<br/>
