provide two-level tabs

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       Update 20150607:<br/>
       <ul>
         <li>更新到jillhx衣柜阶段终结版，合计1907，占比98%。仅有6件可获得物品尚未获得，详情见<a href="http://tieba.baidu.com/p/3783436049?pid=69500845673#69500845673">jillhx的衣柜贴</a> </li>
-        <li>略微修正了界面</li>
+        <li>略微修正了界面, 提供了两层分类筛选</li>
         <li>批量导入不再要求编号百十位填0</li>
       </ul>
       <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
