--- a/index.html
+++ b/index.html
@@ -109,11 +109,9 @@
         <li>批量导入不再要求编号百十位填0</li>
         <li>仅供参考用的饰品建议模式，最大化饰品评分</li>
       </ul>
-      <strong>注意！饰品穿多了有衰减，请不要穿超过10件饰品，不要穿低分饰品</strong><br/>
-      说起来，看到各位纷纷拿到了连胜或者第一的各种成就，我很欣慰，其实最初的目的只是想让大家节省一些脑细胞和时间，不要把时间都浪费在无聊地筛选数字上，这种事情电脑做合适。
-      没有想到的是那么多朋友都跑过来感谢说在线筛选器帮助了自己，我也看到了你们在吧里向其他人推荐这个网页，我很惶恐，也很感动。但愿这个小小的软件能让你们在玩奇迹的每一天心情都可以好一些。<br/>
-      &nbsp;&nbsp;- 只通了一半的关，还没有拿到任何成就的ip君留
+      ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
     </div>
+    <hr/>
     <div>
       <form name="filter_form">
         <div>
