use a lightweight tab

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>奇迹暖暖在线配装器</title>
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='jquery-ui.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
@@ -95,6 +94,12 @@
     html ul.tabs li.active, html ul.tabs li.active a:hover  {
     	background: #fff;
     	border-bottom: 1px solid #fff;
+    }
+    #category_container div {
+    	display:none;
+    }
+    #category_container div.active {
+    	display:block;
     }
     </style>
     
