--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     </style>
     
   </head>
+  <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150607<br/>
