--- a/index.html
+++ b/index.html
@@ -107,13 +107,11 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      服装数据来自jillhx@贴吧 20150607<br/>
-      Update 20150607:<br/>
+      服装数据来自jillhx@贴吧 20150608<br/>
+      Update 20150609:<br/>
       <ul>
-        <li>更新到jillhx衣柜阶段终结版，合计1907，占比98%。仅有6件可获得物品尚未获得，详情见<a href="http://tieba.baidu.com/p/3783436049?pid=69500845673#69500845673">jillhx的衣柜贴</a> </li>
-        <li>略微修正了界面, 提供了两层分类筛选</li>
-        <li>批量导入不再要求编号百十位填0</li>
-        <li>仅供参考用的饰品建议模式，最大化饰品评分</li>
+        <li>根据最新的衣柜信息进行了更正</li>
+        <li>修正了若干兼容性问题</li>
       </ul>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
     </div>
