--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         <li>根据最新的衣柜信息进行了更正</li>
         <li>修正了若干兼容性问题</li>
       </ul>
+      <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
     </div>
     <hr/>
