add count to labels

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     	color: #000;
     	display: block;
     	font-size: 1.2em;
-    	padding: 0 20px;
+    	padding: 0 10px;
     	border: 1px solid #fff;
     	outline: none;
     }
@@ -108,10 +108,9 @@
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
       服装数据来自jillhx@贴吧 20150608<br/>
-      Update 20150609:<br/>
+      Update 20150610:<br/>
       <ul>
-        <li>根据最新的衣柜信息进行了更正</li>
-        <li>修正了若干兼容性问题</li>
+        <li>每类服装标签上标明了拥有的数量</li>
       </ul>
       <strong style="color:red">每关的tag要求不一样，碰到F就不要去帖子里哭了，赶紧换一件连衣裙或者外套是正经，做任务的时候也要看看任务描述，人家文案好歹也写了那么多字呢。</strong><br/>
       ip君要回老家结婚去了，这两周不定期更新，只修bug不加功能，报错请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a><br/>
